kubernetes/apps/dozerdb/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dozerdb
  labels:
    pod-security.kubernetes.io/enforce: restricted
