kubernetes/apps/dozerdb/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-lan
  namespace: dozerdb
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dozerdb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/8
      ports:
        - protocol: TCP
          port: 7474
        - protocol: TCP
          port: 7687

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-lb-ingress
  namespace: dozerdb
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dozerdb
  ingress:
    - fromEntities:
        - world
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "7474"
              protocol: TCP
            - port: "7687"
              protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: dozerdb
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dozerdb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 7474

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-gaspard
  namespace: dozerdb
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dozerdb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gaspard
      ports:
        - protocol: TCP
          port: 7687
